Found a way to upload and stream without jwt. But for everything else jwt is necessary.